2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* drivers/net/tcpip/include/.cvsignore: New file.
	* drivers/net/tcpip/include/precomp.h: New file.
	* drivers/net/tcpip/Makefile (TARGET_PCH): Set to include/precomp.h.
	* drivers/net/tcpip/tests/Makefile (TARGET_PCH): Reset.
	* drivers/net/tcpip/*/*.c: Use pre-compiled header.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* drivers/net/ndis/include/.cvsignore: New file.
	* drivers/net/ndis/.cvsignore: Add *.d.
	* drivers/net/ndis/Makefile (TARGET_PCH): Set to include/ndissys.h.
	* drivers/net/ndis/*.c: Use pre-compiled header.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* drivers/net/afd/include/.cvsignore: New file.
	* drivers/net/afd/include/tdiconn.h: Don't include <afd.h>.
	* drivers/net/afd/.cvsignore: Add *.d.
	* drivers/net/afd/makefile (TARGET_PCH): Set to include/afd.h.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* subsys/system/taskmgr/.cvsignore: Add *.gch.
	* subsys/system/taskmgr/precomp.h: New file.
	* subsys/system/taskmgr/makefile (TARGET_PCH): Set to precomp.h.
	* subsys/system/taskmgr/*.c: Use pre-compiled header.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* subsys/system/usetup/.cvsignore: Add *.gch.
	* subsys/system/usetup/precomp.h: New file.
	* subsys/system/usetup/makefile (TARGET_PCH): Set to precomp.h.
	* subsys/system/usetup/*.c: Use pre-compiled header.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* subsys/system/cmd/.cvsignore: Add *.gch.
	* subsys/system/cmd/precomp.h: New file.
	* subsys/system/cmd/Makefile (TARGET_PCH): Set to precomp.h.
	* subsys/system/cmd/*.c: Use pre-compiled header.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/user32/include/.cvsignore: New file.
	* lib/user32/Makefile (TARGET_PCH): Set to include/user32.h.
	* lib/user32/*/*.c: Use pre-compiled header.